fixed video overflow

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -173,13 +173,14 @@ body {font-family: Verdana, sans-serif;}
 }
 #videoModal{
   position: fixed;
-  top: 15%;
+  top: 0;
   left: 17%;
-  height: 800px;
+  height: 600px;
   background: rgba(0, 0, 0, 0.774);
   padding: 1%;
   color: white;
   font-weight: bold;
+  overflow-y: scroll;
 }
 .style{
     background-color: #f79240;
